# fractal-physics

./: Cargo.toml  README.md  index.html  submission.md  world40.json  world60.json
src/: app.rs  buffer.rs  camera.rs  game.rs  lib.rs  main.rs  postprocess.rs  postprocess.wgsl  shader.wgsl  state.rs  texture.rs
src/procgen/: mod.rs  parse.rs  tileset.rs  types.rs  wfc.rs
src/procgen/tilemaps/knots/: knots.xml
src/scene/: lights.rs  mod.rs  objects.rs  player.rs  tessellate.rs  types.rs  vertex.rs
tests/: common.rs  rects.rs  scene.rs  wfc.rs
tests/snapshots/: rects__common__rects_default_world.snap  rects__common__rects_default_world.snap.new  rects__common__rects_no_png.snap  rects__common__rects_no_png.snap.new  rects__common__rects_with_png.snap  rects__common__rects_with_png.snap.new  scene__common__scene_default_no_postprocessing.snap  scene__common__scene_large_no_png.snap  scene__common__scene_medium_no_png.snap  scene__common__scene_small_no_png.snap  scene__common__scene_with_png.snap  scene__common__scene_with_png.snap.new  wfc__common__wfc_castle_seed_13.snap  wfc__common__wfc_castle_seed_13.snap.new  wfc__common__wfc_castle_seed_256.snap  wfc__common__wfc_castle_seed_256.snap.new  wfc__common__wfc_circuit_seed_7.snap  wfc__common__wfc_circuit_seed_7.snap.new  wfc__common__wfc_circuit_seed_88.snap  wfc__common__wfc_circuit_seed_88.snap.new  wfc__common__wfc_floorplan_seed_77.snap  wfc__common__wfc_floorplan_seed_77.snap.new  wfc__common__wfc_floorplan_seed_9.snap  wfc__common__wfc_floorplan_seed_9.snap.new  wfc__common__wfc_knots_seed_123.snap  wfc__common__wfc_knots_seed_123.snap.new  wfc__common__wfc_knots_seed_5.snap  wfc__common__wfc_knots_seed_5.snap.new  wfc__common__wfc_large_seed_999.snap  wfc__common__wfc_large_seed_999.snap.new  wfc__common__wfc_medium_seed_100.snap  wfc__common__wfc_medium_seed_100.snap.new  wfc__common__wfc_small_seed_1.snap  wfc__common__wfc_small_seed_1.snap.new  wfc__common__wfc_small_seed_42.snap  wfc__common__wfc_small_seed_42.snap.new
