[package]
name = "placeholder-name"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
pollster = "0.4.0"
wgpu = "27.0.1"
winit = "0.30.12"
bytemuck = { version = "1.24", features = ["derive"] }
rand = "0.9.2"
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
cgmath = "0.18.0"
futures = "0.3.31"
futures-intrusive = "0.5.0"
itertools = "0.14.0"
serde_json = "1.0.145"
indicatif = "0.17"

[dev-dependencies]
insta = "1"
base64 = "0.22"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
# wgpu = { version = "27.0.1", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }

[lib]
name = "placeholder_name_lib"
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[profile.release]
strip = true
